--- a/animate.css
+++ b/animate.css
@@ -23,6 +23,62 @@ Copyright (c) 2013 Daniel Eden
   -webkit-animation-duration: 2s;
   animation-duration: 2s;
 }
+.animated.delay100ms {
+	animation-delay: 100ms;
+	-webkit-animation-delay: 100ms;
+}
+.animated.delay250ms {
+	animation-delay: 250ms;
+	-webkit-animation-delay: 250ms;
+}
+.animated.delay500ms {
+	animation-delay:500ms;
+	-webkit-animation-delay: 500ms;
+}
+.animated.delay750ms {
+	animation-delay:750ms;
+	-webkit-animation-delay: 750ms;
+}
+.animated.delay1s {
+	animation-delay: 1s;
+	-webkit-animation-delay: 1s;
+}
+.animated.delay2s {
+	animation-delay: 2s;
+	-webkit-animation-delay: 2s;
+}
+.animated.delay3s {
+	animation-delay: 3s;
+	-webkit-animation-delay: 3s;
+}
+.animated.delay4s {
+	animation-delay: 4s;
+	-webkit-animation-delay: 4s;
+}
+.animated.delay5s {
+	animation-delay: 5s;
+	-webkit-animation-delay: 5s;
+}
+.animated.delay6s {
+	animation-delay: 6s;
+	-webkit-animation-delay: 6s;
+}
+.animated.delay7s {
+	animation-delay: 7s;
+	-webkit-animation-delay: 7s;
+}
+.animated.delay8s {
+	animation-delay: 8s;
+	-webkit-animation-delay: 8s;
+}
+.animated.delay9s {
+	animation-delay: 9s;
+	-webkit-animation-delay: 9s;
+}
+.animated.delay10s {
+	animation-delay: 10s;
+	-webkit-animation-delay: 10s;
+}
 
 @-webkit-keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
