--- a/animate.css
+++ b/animate.css
@@ -79,6 +79,46 @@ Copyright (c) 2013 Daniel Eden
 	animation-delay: 10s;
 	-webkit-animation-delay: 10s;
 }
+@-webkit-keyframes fold {
+  0% {
+	opacity:1;
+  }
+
+  40%,70% {
+    height:5px;
+	line-height:5px;
+  }
+
+  100% {
+    height:5px;
+	line-height:5px;
+	width:0;
+	opacity:0;
+  }
+}
+
+@keyframes fold {
+  0% {
+	opacity:1;
+  }
+
+  40%,70% {
+    height:5px;
+	line-height:5px;
+  }
+
+  100% {
+    height:5px;
+	line-height:5px;
+	width:0;
+	opacity:0;
+  }
+}
+
+.fold {
+  -webkit-animation-name: fold;
+  animation-name: fold;
+}
 
 @-webkit-keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
