--- a/animate.css
+++ b/animate.css
@@ -12,6 +12,20 @@ Copyright (c) 2013 Daniel Eden
   animation-duration: 1s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
+  animation-direction:normal;
+}
+
+.animated.reverse{
+	animation-direction:reverse;
+	-webkit-animation-direction:reverse;
+}
+.animated.alternate-reverse{
+	animation-direction:alternate-reverse;
+	-webkit-animation-direction:alternate-reverse;
+}
+.animated.alternate{
+	animation-direction:alternate;
+	-webkit-animation-direction:alternate;
 }
 
 .animated.infinite {
